tests/class_subtyping/class_subtyping.exp
Error: test2.js:7
  7: var y: I.B = new C();
                  ^^^^^^^ C. This type is incompatible with
  7: var y: I.B = new C();
            ^^^ B

Error: test3.js:6
  6: var a: A<string, number, Array<bool>> = c; // the third type arg is incorrect
                                             ^ A. Has some incompatible type argument with
  6: var a: A<string, number, Array<bool>> = c; // the third type arg is incorrect
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A
  Type argument `Z` is incompatible:
      2: class B extends A<string, number, bool> {}
                                           ^^^^ boolean. This type is incompatible with
      6: var a: A<string, number, Array<bool>> = c; // the third type arg is incorrect
                                  ^^^^^^^^^^^ array type

Error: test4.js:7
  7: foo((new C: C<O>), { f_: 0 });
                        ^^^^^^^^^ object literal. This type is incompatible with the expected param type of
  7: foo((new C: C<O>), { f_: 0 });
                   ^ O
  Property `f` is incompatible:
      7: foo((new C: C<O>), { f_: 0 });
                       ^ property `f`. Property not found in
      7: foo((new C: C<O>), { f_: 0 });
                            ^^^^^^^^^ object literal

Error: test4.js:13
 13: foo(new D, { f_: 0 });
                ^^^^^^^^^ object literal. This type is incompatible with the expected param type of
  9: class D extends C<O> {
                       ^ O
  Property `f` is incompatible:
      9: class D extends C<O> {
                           ^ property `f`. Property not found in
     13: foo(new D, { f_: 0 });
                    ^^^^^^^^^ object literal


Found 4 errors
